# spotifactory

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
deploy/: env.example  raspotify.conf  setup.sh  spotifactory.service
deploy/relay/: worker.js  wrangler.toml
deploy/relay/.wrangler/cache/: wrangler-account.json
docs/: sonos.md
scripts/: debug_sonos_spotify.py  list_sonos_speakers.py  list_spotify_devices.py  run_debugpy.sh  test_rfcomm.py  test_sonos.py
src/spotifactory/: __init__.py  auth_server.py  capture.py  main.py  printer.py  rfid.py  runner.py  spotify.py  startup.py
src/spotifactory/display/: oled.py  sh1106.py  sim.py
src/spotifactory/hardware/: bluetooth.py  printer.py  rfid.py  sonos.py
src/spotifactory/input/: seengreat.py
src/spotifactory/menu/: __init__.py  catalog.py  definitions.py  input_buttons.py  menu.py  menus.py  navigation.py  renderer_oled.py  renderer_sh1106.py  renderer_sim.py  run_on_pi.py  run_on_seengreat.py  scroll.py  simulated_menu.py
src/spotifactory/tasks/: base.py
src/spotifactory/tasks/bluetooth/: __init__.py  steps.py
src/spotifactory/tasks/capture/: __init__.py  steps.py
src/spotifactory/tasks/home/: __init__.py  steps.py
src/spotifactory/tasks/play_tag/: __init__.py  steps.py
src/spotifactory/tasks/reauth/: __init__.py  steps.py
src/spotifactory/tasks/speaker/: __init__.py  steps.py
tests/: conftest.py  test_basic.py  test_deployment.py
