[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotifactory"
version = "0.1.0"
description = "A small Python project scaffold for Spotifactory"
authors = [ { name = "Joseph Pease", email = "you@example.com" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "spotipy>=2.22.0",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

rpi = [
    "Adafruit-Blinka>=8.0.0",
    "adafruit-circuitpython-ssd1306>=4.0.0",
]

gui = [
    "Pillow>=9.0",
]
