[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotifactory"
version = "0.1.0"
description = "A small Python project scaffold for Spotifactory"
authors = [ { name = "Joseph Pease", email = "you@example.com" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "spotipy>=2.22.0",
    "python-dotenv>=1.0",
    "pyserial>=3.5",
    "nfcpy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
strict = false
ignore_missing_imports = true  # needed for optional RPi/Adafruit deps

[project.scripts]
spotifactory = "spotifactory.main:main"

[project.optional-dependencies]
gui = [
    "Pillow>=9.0",
]
rpi = [
    "Pillow>=9.0",
    "Adafruit-Blinka>=8.0.0",
    "adafruit-circuitpython-ssd1306>=4.0.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
